--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,23 +16,27 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" 
-        [routerLink]="['nested-form']" routerLinkActive="active">nested-form</a>
+        [routerLink]="['nested-form']" routerLinkActive="active">Checkbox</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" 
-        [routerLink]="['array-form']" routerLinkActive="active">array-form</a>
+        [routerLink]="['array-form']" routerLinkActive="active">Select</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" 
-        [routerLink]="['submit-form']" routerLinkActive="active">submit-form</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" 
-        [routerLink]="['valid-form']" routerLinkActive="active">valid-form</a>
+        [routerLink]="['valid-form']" routerLinkActive="active">Checkbox2</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" 
         [routerLink]="['inquiry']" routerLinkActive="active">Inquiry</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" 
+        [routerLink]="['submit-form']" routerLinkActive="active">Register</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" 
+        [routerLink]="['register']" routerLinkActive="active">Register2</a>
       </li>
     </ul> 
   </div>
